--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h1>Recipe</h1>
 		<h1><img src="images/eggs.jpg" alt="100" height="100" align="right" />Eggs</h1> 
 		<h1>Benedict</h1>
-		<h6>By <em>Yu Xue</em></h6>
+		<h6>By Yu Xue</h6>
 		<h4>Health and Yummy!</h4>
 		<hr />
       
