--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<div class="container"> 
 
 		<h1>Recipe</h1>
-		<h1><img src="images/eggs.jpg" alt="100" height="100" align="right" />Eggs</h1> 
+		<h1><img src="photos/eggs.jpg" width="350" height="300" align="right"/>Eggs</h1> 
 		<h1>Benedict</h1>
-		<h6>By Yu Xue</h6>
+		<em>By Yu Xue</em>
 		<h4>Health and Yummy!</h4>
 		<hr />
       
@@ -74,7 +74,8 @@
 				</ol>
 			
 		</ul>
-
+	
+		<p class="end">Congratuation!</p>
 	</div><!-- end container -->
 	
 </body>
